[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firebird-butler-protobuf"
dynamic = ["version"]
description = 'Firebird Butler protocol buffers'
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["Firebird", "Butler", "protobuf"]
authors = [
  { name = "Pavel Cisar", email = "pcisar@users.sourceforge.net" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Topic :: Software Development",
]
dependencies = [
    "protobuf~=5.29",
]

[project.urls]
Home = "https://firebirdsql.org/en/firebird-butler-dev/"
Documentation = "https://firebird-butler.rtfd.io"
Issues = "https://github.com/FirebirdSQL/Butler/issues"
Funding = "https://github.com/sponsors/pcisar"
Source = "https://github.com/FirebirdSQL/Butler/python"

[project.entry-points."firebird.butler.protobuf"]
"firebird.butler.fbdp" = "firebird.butler.fbdp_pb2:DESCRIPTOR"
"firebird.butler.fbsd" = "firebird.butler.fbsd_pb2:DESCRIPTOR"
"firebird.butler.fbsp" = "firebird.butler.fbsp_pb2:DESCRIPTOR"

[tool.hatch.version]
path = "src/firebird/butler/__about__.py"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/firebird"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = [
]

[tool.hatch.envs.hatch-test]
extra-args = ["-vv"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11", "3.12", "3.13"]

[tool.hatch.envs.doc]
detached = false
platforms = ["linux"]
dependencies = [
  "Sphinx==7.2.6",
  "sphinx-bootstrap-theme>=0.8.1",
  "sphinx-autodoc-typehints>=1.24.0",
  "doc2dash>=3.0.0"
]
[tool.hatch.envs.doc.scripts]
build = "cd docs ; make html"
docset = [
  "cd docs ; doc2dash -u https://firebird-butler.readthedocs.io/en/latest/ -f -i ./_static/fb-favicon.png -n firebird-butler ./_build/html/",
  "cd docs; VERSION=`hatch version` ; tar --exclude='.DS_Store' -cvzf ../dist/firebird-butler-$VERSION-docset.tgz firebird-butler.docset",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["A", "ARG", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "ISC", "N",
  "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "T", "TID", "UP", "W", "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  #
  "E741",
  # Allow relative imports
  "TID252",
  # Allow literals in exceptions
  "EM101", "EM102",
  # Single quotes instead double
  "Q000"
]
unfixable = [
  # Don't touch unused imports
  "F401",
  # Don't change single quotes to double
  "Q000"
]
exclude = ["*_pb2.py", "*.pyi", "tests/*", "docs/*", "personal/*"]

[tool.ruff.lint.isort]
known-first-party = ["firebird.butler"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.extend-per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["firebird.butler", "tests"]
branch = true
parallel = true
omit = [
  "src/firebird/butler/__about__.py",
]

[tool.coverage.paths]
firebird_butler = ["*/python/src/firebird/butler"]
tests = ["tests", "*/python/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
