[build_sphinx]
source-dir=docs
all-files=True


[metadata]
name = firebird-butler-protobuf
version = 0.2.1
description = Firebird Butler protocol buffers
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Pavel Císař
author_email = pcisar@users.sourceforge.net
license = MIT
license_file = LICENSE
url = https://github.com/FirebirdSQL/Butler
keywords = Firebird Butler protobuf
project_urls =
    Documentation = https://firebird-butler.rtfd.io
    Bug Reports = https://github.com/FirebirdSQL/Butler/issues
    Funding = https://www.firebirdsql.org/en/donate/
    Source = https://github.com/FirebirdSQL/Butler/python
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Topic :: Software Development

[options]
zip_safe = True
python_requires = >=3.6, <4
install_requires =
    protobuf>=3.11.0
packages = firebird.butler
tests_require = nose
test_suite = nose.collector

[options.entry_points]
firebird.butler.protobuf =
    firebird.butler.fbdp = firebird.butler.fbdp_pb2:DESCRIPTOR
    firebird.butler.fbsd = firebird.butler.fbsd_pb2:DESCRIPTOR
    firebird.butler.fbsp = firebird.butler.fbsp_pb2:DESCRIPTOR

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=0

